--- a/client/src/styles.scss
+++ b/client/src/styles.scss
@@ -8,7 +8,9 @@ body,
   height: 100%;
   margin: 0;
   padding: 0;
-}
+  background: linear-gradient(to left, black 0%, slategray 50%, black 100% );
+  color: #f4d7d7;
+  }
 
 .App {
   font-family: "Montserrat", sans-serif;
@@ -21,19 +23,31 @@ body,
 }
 
 .spacer {
-  height: 100%;
+  height: 3%;
+}
+
+.Add {
+    border: none;
+    background-color: black;
+    color: white;
+    padding: 3px 8px;
+    margin-top: 16px;
+    margin-left: 30%;
+    width: 30%;
 }
 
 .bubble-wrap {
   margin: 0 auto;
   display: flex;
   flex-direction: column;
+  color: #f4d7d7;
 }
 
 .colors-wrap {
-  height: 100%;
+  height: 105%;
   width: 300px;
   box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
+  color: #f4d7d7;
 
   ul {
     list-style: none;
@@ -61,7 +75,8 @@ body,
 }
 
 form {
-  margin-top: 60px;
+  margin-top: 0%;
+  margin-bottom: 20%;
   display: flex;
   flex-direction: column;
 
@@ -95,5 +110,23 @@ form {
     color: white;
     padding: 3px 8px;
     margin-top: 16px;
+  }
+}
+
+.login-form {
+  display: flex;
+  justify-content: center;
+  // flex-direction: column;
+  align-items: center;
+  
+  input{
+    margin: auto;
+  }
+
+  button{
+    border-radius: 25%;
+    width: 50%;
+    margin-left: 25%;
+    
   }
 }
